# prueba-tecnica

./: README.md  pg_docker_compose.yaml  pg_docker_compose_v2.yaml
app/: Untitled.ipynb
app/etltools/: pyproject.toml  trabajo.ipynb
app/etltools/etltools/: etltools.py
app/etltools/tests/: test.csv  test_db.sql  test_etltools.py
db/: 01-init.sh
eda/: eda.ipynb
etl/etl/: etl.py
etlmod/: README.md
etlmod/tests/: context.py  test_etl.py
