[tool.poetry]
name = "etltools"
version = "0.1.0"
description = "Prueba práctica de ETL"
authors = ["Alby <delcaidero@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.4"
pandas = "^1.5.3"
psycopg2-binary = "^2.9.5"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-postgresql = "^4.1.1"
psycopg = "^3.1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
